# kreator-ofert-DiWine

./: .gitignore  ANALIZA_POROWNAWCZA.md  BRIEF_0_MERGE_BRANCHES_v2.md  BRIEF_1_FASTHUB_FRONTEND_FOUNDATION.md  BRIEF_2_FASTHUB_INTEGRATION_FIXES.md  Brief 17 - faza 2.txt  CLAUDE.md  CLAUDE_TEST_SPEC_50_TESTS.md  FASTHUB_ARCHITEKTURA.md  FASTHUB_DOKUMENTACJA_AI.md  FASTHUB_FRONTEND_INTEGRATION.md  FASTHUB_PROJECT_SUMMARY.md  FASTHUB_TECHNICAL_DOCS.md  FASTHUB_VSCODE_GUIDE.md  FINAL_TEST_REQUIREMENTS.md  FINAL_VERIFICATION_REPORT.md  MISSING_MODULES_ANALYSIS.md  MISSING_TESTS.md  PLAN_BRIEF45.md  QUICK-START.md  RAILWAY_DEPLOYMENT.md  README.md  REGISTRATION_SIMPLIFICATION_SUMMARY.md  SYSTEM_DOCUMENTATION.md  TESTS_SUMMARY.md  TEST_COVERAGE_FINAL.md  TEST_STATUS.md  brief 10  faza 2.txt  brief 11 - faza 2.txt  brief 12, faza 2.txt  brief 13, faza 2.txt  brief 14, faza 2.txt  brief 15 faza 2.txt  brief 16 - faza 2.txt  brief 18 - social login.txt  brief 18.txt  brief 19.txt  brief 2-faza 1.txt  brief 20.txt  brief 21.txt  (+14 more)
.claude/: settings.local.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  migrate_slots.py  requirements.txt
docs/: CONTRACT_API.md  TESTING.md
fasthub-backend/: .env.example  .env.production  .env.test  .gitignore  API_ENDPOINTS_COMPARISON.md  BOILERPLATE_README.md  CLAUDE_REQUIREMENTS.md  CLAUDE_SECTIONS_CHECKLIST.md  COMPLETE_IMPLEMENTATION_PLAN.md  DOCKER.md  Dockerfile  EMAIL_SETUP.md  FEATURE_MAPPING.md  FINAL_SUMMARY.md  LINE_COUNT_EXPLANATION.md  Makefile  PERFORMANCE.md  PRE_COMMIT.md  PRODUCTION_READINESS.md  PROJECT_STATS.md  (+26 more)
(+669 files in other folders)
